--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2024"
 [dependencies]
 color-eyre = "0.6"
 crossterm = "0.29"
+csv = "1.3"
+dirs = "6.0.0"
 ratatui = "0.29"
+serde = { version = "1", features = ["derive"]}
